bugfix(TDI-38561) : manage wrong endpoint in REST connection (#642)